--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong>Dear Person.</strong>
+                        <strong>Dear Sunshine.</strong>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Numquam labore omnis minus maiores laboriosam, facere in beatae esse. 
+                            Well ik you are stressed with your upcoming lab exams.But trust me you are goinf to crush it.
+                            Stop overthinking okay?Also...udk how much I care abt you .Let me tell you on a secret.
+                            Every time I see your notification,I can't help but smile.Just know you mean a lot to me.
                         </p>
                     </div>
                 </div>
