--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                         <strong>Dear Sunshine.</strong>
                         <p>
                             Well ik you are stressed with your upcoming lab exams.But trust me you are going to crush it.
-                            Stop overthinking okay?Also,udk how much I care abt you .Let me tell you on a secret.
-                            Every time I see ur notification,I can't help but smile.Just know you mean a lot to me.❤️
+                            Stop overthinking okay?Also,udk how much I care abt you .Every time I see ur notification,I can't help but smile.
+                            Just know you mean a lot to me.❤️
                         </p>
                     </div>
                 </div>
